# dsa

./: Untitled.ipynb  playground.ipynb  pyproject.toml  readme.md  test.py
Arrays_and_Dynamic_Arrays/: 118.pascals-triangle.py  121.best-time-to-buy-and-sell-stock.py  123.best-time-to-buy-and-sell-stock-iii.py  1314.matrix-block-sum.py  1390.four-divisors.py  1456.maximum-number-of-vowels-in-a-substring-of-given-length.py  164.maximum-gap.py  169.majority-element.py  189.rotate-array.py  229.majority-element-ii.py  240.search-a-2d-matrix-ii.py  304.range-sum-query-2d-immutable.py  41.first-missing-positive.py  42.trapping-rain-water.py  48.rotate-image.py  54.spiral-matrix.py  565.array-nesting.py  567.permutation-in-string.py  769.max-chunks-to-make-sorted.py  test.py
Backtracking/: 1079.letter-tile-possibilities.py  1307.verbal-arithmetic-puzzle.py  131.palindrome-partitioning.py  37.sudoku-solver.py  46.permutations.py  47.permutations-ii.py  51.n-queens.py  52.n-queens-ii.py  526.beautiful-arrangement.py  60.permutation-sequence.py  79.word-search.py  980.unique-paths-iii.py
BinaryTrees/: 100.same-tree.py  101.symmetric-tree.py  104.maximum-depth-of-binary-tree.py  111.minimum-depth-of-binary-tree.py  1315.sum-of-nodes-with-even-valued-grandparent.py  1379.find-a-corresponding-node-of-a-binary-tree-in-a-clone-of-that-tree.py  1448.count-good-nodes-in-binary-tree.py  404.sum-of-left-leaves.py
BitManipulation/: 1310.xor-queries-of-a-subarray.py  1318.minimum-flips-to-make-a-or-b-equal-to-c.py  137.single-number-ii.py  191.number-of-1-bits.py  231.power-of-two.py  (+6 more)
(+134 files in other folders)
