[tool.poetry]
name = "dsa"
version = "0.1.0"
description = "contains data structures and algorithms in python"
authors = ["Imtiaz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
debugpy = "^1.8.0"
mypy = "^1.8.0"
ruff = "^0.1.9"
black = "^23.12.1"
jupytext = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
